Fix 'Table visibility' issue #45 https://code.google.com/p/wpkgexpress/issues/detail?id=45

--- a/webroot/css/plain.css
+++ b/webroot/css/plain.css
@@ -455,6 +455,10 @@
       text-align: center;
     }
 
+	tr:hover {
+		background: #f4f4f4;
+	}
+
     tr.altRow td {
       background: #f4f4f4;
     }
